# kModel

./: .SRCINFO  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  PKGBUILD  README.md  org.kde.kmodel.desktop  org.kde.kmodel.metainfo.xml
resources/: Main.qml  ViewportPage.qml  WelcomePage.qml
shaders/: model.frag  model.frag.slang  model.vert  model.vert.slang
src/: CMakeLists.txt  main.cpp  stlloader.cpp  stlloader.h  vulkanviewport.cpp  vulkanviewport.h
